--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,24 @@
 body {
   font-family: "Nunito", sans-serif;
   font-size: larger;
+  overflow-y: scroll;
 }
 
 h1{
   margin-top: 20px;
   margin-bottom: 10px;
+}
+
+html, body {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.footer {
+  margin-top: auto;
 }
